--- a/css/global.css
+++ b/css/global.css
@@ -18,9 +18,11 @@ body,
 button,
 p {
   margin: 0;
+  text-align: center;
 }
 
 body {
   background-color: var(--color-dark-green);
   color: var(--color-white);
+  margin: 0 1rem 0 1rem;
 }
