--- a/css/typography.css
+++ b/css/typography.css
@@ -17,7 +17,7 @@ h3,
 }
 
 h1 {
-  font-size: 6rem;
+  font-size: 5rem;
 }
 
 h2,
@@ -31,11 +31,21 @@ h3 {
 }
 
 h5 {
-  font-size: 3rem;
+  font-size: 2rem;
 }
 
 a,
 h4,
 .hint p {
   font-size: 1.5rem;
+}
+
+@media screen and (min-width: 560px) {
+  h1 {
+    font-size: 6rem;
+  }
+
+  h5 {
+    font-size: 3rem;
+  }
 }
