--- a/css/main.css
+++ b/css/main.css
@@ -27,11 +27,13 @@ a {
 }
 
 body {
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 3rem;
-  padding-top: 12rem;
+  /* padding-top: 3rem; */
 }
 
 .hint {
